<resources>
    <string name="app_name">iBangAndroid</string>
    <string name="warn_dialog_btn_tex">知道了</string>

    <!--login layout-->
    <string name="login_username_txt">手机号码</string>
    <string name="login_phonecode_txt">验证码</string>
    <string name="login_phonecode_btn">获取验证码</string>
    <string name="login_btn">登陆</string>
    <string name="login_username_input">输入手机号码</string>
    <string name="login_phonecode_input">输入验证码</string>
    <string name="title_activity_login">登陆</string>
    <string name="drive">代驾</string>
    <string name="homepager">首页</string>
    <string name="order">订单</string>
    <string name="orde">订餐</string>
    <string name="user">我的</string>
    <string name="title_activity_demo">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="medio">药速达</string>
    <string name="personal_conter">个人中心</string>
    <string name="personal_information">个人信息</string>
    <string name="setting">设置</string>
    <string name="address">收货地址</string>

</resources>
