<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:id="@+id/homepager"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:background="@drawable/homepage_nor"
            android:id="@+id/home_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homepager"
            android:textSize="10dp"
            android:id="@+id/home_text"
            android:layout_marginTop="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:id="@+id/order"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:background="@drawable/ordericon_nor"
            android:id="@+id/order_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_marginTop="2dp"
            android:textSize="10dp"
            android:id="@+id/order_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:id="@+id/user"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:background="@drawable/usericon_nor"
            android:id="@+id/user_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginTop="2dp"
            android:textSize="10dp"
            android:id="@+id/user_text"/>
    </LinearLayout>


</LinearLayout>