<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.bigkoo.convenientbanner.ConvenientBanner
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/convenientBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:canLoop="true"
            />
        //控制循环与否
        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/bannertext"
            android:layout_alignBottom="@+id/convenientBanner"
            android:layout_toRightOf="@+id/listView"
            android:layout_toEndOf="@+id/listView"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        //选动画效果
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:visibility="gone"/>
        //每日精选商家
        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/blue"
            android:layout_below="@+id/convenientBanner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/shops"
            android:visibility="gone">
            <View
                android:layout_width="6dp"
                android:layout_height="30dp"
                android:background="#ffffff"
                android:id="@+id/view"
                android:layout_marginLeft="29dp"
                android:layout_marginStart="29dp"
                android:layout_alignBottom="@+id/textView20"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="每日精选商家"
                android:textSize="24sp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/view"
                android:layout_toEndOf="@+id/view"
                android:layout_marginLeft="31dp"
                android:layout_marginStart="31dp"
                android:id="@+id/textView20" />
        </RelativeLayout>

        //大首页
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/convenientBanner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:id="@+id/faction"
            android:visibility="gone"
            android:background="@color/text_white">
            //代驾
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_below="@+id/convenientBanner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:id="@+id/drive"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/driver_icon3x"
                    android:id="@+id/image_drive"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drive"
                    android:id="@+id/textd_rive"
                    android:layout_marginTop="2dp"
                    android:layout_below="@+id/image_drive"
                    android:layout_alignRight="@+id/image_drive"
                    android:layout_alignEnd="@+id/image_drive"
                    />
            </LinearLayout>
            //订餐
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_below="@+id/convenientBanner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:id="@+id/ordering"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/reservation_icon3x"
                    android:id="@+id/image_order"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orde"
                    android:id="@+id/text_order"
                    android:layout_marginTop="2dp"
                    android:layout_below="@+id/image_order"
                    android:layout_alignRight="@+id/image_order"
                    android:layout_alignEnd="@+id/image_order"
                    />
            </LinearLayout>

            //药
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_below="@+id/convenientBanner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:id="@+id/medicine"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/medicine_icon3x"
                    android:id="@+id/image_medicine"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medio"
                    android:id="@+id/textdrive"
                    android:layout_marginTop="2dp"
                    android:layout_below="@+id/image_medicine"
                    android:layout_alignRight="@+id/image_medicine"
                    android:layout_alignEnd="@+id/image_medicine"
                    />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>




</android.support.design.widget.CoordinatorLayout>